[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "rms-oops"
dynamic = ["version"]
description = "Object-Oriented Python and SPICE"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "astropy",
  "cspyce",
  "numpy",
  "Pillow",
  "pyparsing",
  "rms-fpzip",
  "rms-interval",
  "rms-julian",
  "rms-pdsparser",
  "rms-pdstable",
  "rms-polymath",
  "rms-solar",
  "rms-tabulation",
  "rms-vax",
  "rms-vicar",
  "scipy"
]
license = {text = "Apache-2.0"}
maintainers = [
  {name = "Robert S. French", email = "rfrench@seti.org"},
  {name = "Joseph N. Spitale", email = "jspitale@seti.org"}
]
keywords = ["oops"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows"
]

[project.urls]
Homepage = "https://github.com/SETI/rms-oops"
Repository = "https://github.com/SETI/rms-oops"
Source = "https://github.com/SETI/rms-oops"
Issues = "https://github.com/SETI/rms-oops/issues"

[tool.setuptools]
packages = ["oops"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "oops/_version.py"
